--- a/Northwood.UI/Northwood.UI.csproj
+++ b/Northwood.UI/Northwood.UI.csproj
@@ -322,6 +322,9 @@
   <ItemGroup>
     <Resource Include="Images\AppIcon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Diagram_16XLG.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
